--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,7 @@ layout: default
     <h1>{{ page.title }}</h1>
     <p class="meta">{{ page.date | date: "%b %-d, %Y" }}
     {% if page.author and page.author.first_name %} • {{ page.author.first_name }} {{ page.author.last_name }}{% elsif page.author %} • {{ page.author }}{% endif %}
-    {% if page.meta %} • {{ page.meta }}{% endif %}</p>
+    {% if page.categories %} • {{ page.categories | join: ', ' }}{% endif %}</p>
   </header>
 
   <article class="post-content">
