--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,8 +20,8 @@ layout: default
     var disqus_shortname = 'blog-suminb-com'; // required: replace example with your forum shortname
     {% if page.meta.dsq_thread_id %}
     var disqus_url = 'http://blog.suminb.com/archives/{{ page.post_id }}';
-    {% else %}
-    var disqus_identifier = '{{ page.title }}';
+    {% elsif page.meta.disqus_identifier %}
+    var disqus_identifier = '{{ page.meta.disqus_identifier }}';
     {% endif %}
 
     /* * * DON'T EDIT BELOW THIS LINE * * */
