--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,6 +14,8 @@ layout: default
   {{ content }}
   </article>
 
+  {% include addthis.html %}
+
   {% if site.disqus %}
   <div id="disqus_thread"></div>
   <script type="text/javascript">
