--- a/css/main.css
+++ b/css/main.css
@@ -403,3 +403,12 @@ a:visited { color: #205caa; }
     margin: 0 0 15px; }
 
 }
+
+/* User defined */
+/* ------------ */
+
+img.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
