--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,11 @@
 
   <div class="wrap">
 
-    <h2 class="footer-heading">{{ site.title }}</h2>
+    <div class="footer-heading">
+      <h2>{{ site.title }}</h2>
+      <p class="site-description">{{ site.description }}</p>
+    </div>
+
 
     <div class="footer-col-1 column">
       <ul>
@@ -52,7 +56,8 @@
     </div>
 
     <div class="footer-col-3 column">
-      <p class="text">{{ site.description }}</p>
+      <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a>
+      <p class="license">This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.</p>
     </div>
 
   </div>
