--- a/css/main.css
+++ b/css/main.css
@@ -418,9 +418,18 @@ div.image-caption {
 }
 
 div.page-content img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
   max-width: 100%;
 }
 
+img.inline {
+  display: block;
+  margin: 0;
+}
+
+/* deprecated */
 img.center {
   display: block;
   margin-left: auto;
