--- a/css/main.css
+++ b/css/main.css
@@ -237,7 +237,7 @@ a:visited { color: #205caa; }
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
   border-radius: 3px;
-  font-size: 15px;
+  font-size: 0.95em;
 }
 
 .post code { padding: 1px 5px; }
@@ -245,7 +245,7 @@ a:visited { color: #205caa; }
 .post ul,
 .post ol { margin-left: 1.35em; }
 
-.post pre code { border: none; }
+.post pre code { border: none; display: block;}
 
 /* terminal */
 .post pre.terminal {
