--- a/css/main.css
+++ b/css/main.css
@@ -238,6 +238,7 @@ a:visited { color: #205caa; }
   -moz-border-radius: 3px;
   border-radius: 3px;
   font-size: 0.95em;
+  white-space: pre-wrap;
 }
 
 .post code { padding: 1px 5px; }
