--- a/css/main.css
+++ b/css/main.css
@@ -189,7 +189,6 @@ a:visited { color: #205caa; }
 
 .post-content > * { margin: 20px 0; }
 
-
 .post-content h1,
 .post-content h2,
 .post-content h3,
@@ -219,11 +218,13 @@ a:visited { color: #205caa; }
 .post-content blockquote {
   border-left: 4px solid #e8e8e8;
   padding-left: 20px;
-  font-size: 18px;
+  font-size: .95em;
   opacity: .6;
-  letter-spacing: -1px;
   font-style: italic;
   margin: 30px 0;
+}
+.post-content blockquote p {
+  margin: 16px 0;
 }
 
 .post-content ul,
@@ -437,11 +438,11 @@ img.center {
   margin-right: auto;
 }
 
-img.float-left {
+div.page-content img.float-left {
   float: left;
   margin-right: 1em;
 }
-img.float-right {
+div.page-content img.float-right {
   float: right;
   margin-left: 1em;
 }
