Use a different configuration for MathJax

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,19 @@
     {% include analytics.html %}
 
     <script type="text/javascript"
-       src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+       src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_SVG"></script>
+    <!--
+    NOTE: Originally, we've been using http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML
+    (same MathJax.js file, but with a different configuration), which comes with a somewhat ugly font.
+    So we decided to use a different configuration (TeX-AMS_SVG), which is used by StackEdit.
+    -->
+    <script>
+    MathJax.Hub.Config({
+      tex2jax: {
+        inlineMath: [['$','$'], ['\\(','\\)']],
+        processEscapes: true
+      }
+    });
+    </script>
     </body>
 </html>
